--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,13 @@ html {
   font-size: 62.5%; /* 10px / 16px = 62.5%, setting definiton of 1rem */
 }
 
+/* 560px / 16 = 36em */
+@media screen and (max-width: 36em) {
+  html {
+    font-size: 60%; /* 10px / 16px = 62.5%, setting definiton of 1rem */
+  }
+}
+
 /* 600 / 16 = 37.5em */
 /* @media screen and (max-width: 37.5em) {
   html {
