--- a/src/utils/SingleEvent/SingleEvent.module.css
+++ b/src/utils/SingleEvent/SingleEvent.module.css
@@ -2,8 +2,8 @@
   margin: 3rem auto;
   border-radius: 0.5rem;
   padding: 1.5rem;
-  width: 100rem;
-  max-width: 80%;
+  width: 95%;
+  max-width: 80rem;
   background-color: var(--color-grey-light-1);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
@@ -19,6 +19,13 @@
   width: 5rem;
   height: 5rem;
   border: 2px solid var(--color-grey-light-3);
+}
+
+@media screen and (max-width: 36em) {
+  .companyImg {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 }
 
 .jobStatusOuter {
@@ -92,6 +99,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 36em) {
+  .jobDescriptionApplication {
+    font-size: 1.4rem;
+  }
 }
 
 .jobDescription,
