--- a/src/utils/ChecklistItem/ChecklistItem.module.css
+++ b/src/utils/ChecklistItem/ChecklistItem.module.css
@@ -54,8 +54,15 @@
 }
 
 .companyName {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 600;
+}
+
+@media screen and (max-width: 36em) {
+  .companyName {
+    font-size: 1.6rem;
+    font-weight: 500;
+  }
 }
 
 .low {
